# renoir

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  build.sh  cbindgen.toml  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml  security.yml
benches/: allocator_bench.rs  ringbuf_bench.rs
cmake/: RenoirConfig.cmake.in  cmake_uninstall.cmake.in
examples/: CMakeLists.txt  README.md  basic_usage.rs  c_example.c  cpp_example.cpp  ring_buffer.rs  test.sh
examples/buffers/: CMakeLists.txt  buffer_example.cpp  control_region_example.cpp  ring_buffer_example.cpp
examples/cmake/: CMakeLists.txt  modern_cpp_example.cpp
examples/region_manager/: CMakeLists.txt  region_manager_example.cpp
examples/topics/: CMakeLists.txt  ORGANIZATION.md  README.md  topic_async_example.cpp  topic_basic_example.cpp  topic_comprehensive_example.cpp  topic_peek_example.cpp
include/: renoir.h  renoir.hpp
scripts/: profile_perf.sh
src/: allocator.rs  buffer.rs  error.rs  ffi.rs  lib.rs  memory.rs  metadata.rs  ringbuf.rs  shared_pools.rs  structured_layout.rs  topic.rs  topic_manager.rs  topic_rings.rs
src/allocators/: bump.rs  mod.rs  pool.rs  traits.rs
src/buffers/: buffer.rs  config.rs  mod.rs  pool.rs  stats.rs
src/cpp/: buffer_pool.cpp  memory_region.cpp  renoir_wrapper.cpp  ring_buffer.cpp
src/ffi/: buffers.rs  memory.rs  mod.rs  topics.rs  topics_test.rs  types.rs  utils.rs  version.rs
src/large_payloads/: blob.rs  chunking.rs  mod.rs  reclamation.rs  ros2_types.rs
src/memory/: config.rs  manager.rs  mod.rs  regions.rs
src/message_formats/: compatibility.rs  migration.rs  mod.rs  official_flatbuffers.rs  registry.rs  schema_evolution.rs  traits.rs  zero_copy.rs
src/metadata_modules/: control.rs  mod.rs  types.rs
src/ringbuf/: basic.rs  mod.rs  sequenced.rs  tests.rs
src/shared_pools/: manager.rs  mod.rs  pool.rs  registry.rs  stats.rs
src/structured_layout/: constants.rs  headers.rs  mod.rs  region.rs
src/sync/: epoch.rs  mio_notify.rs  mod.rs  notify.rs  sequence.rs  swmr.rs
src/topic/: config.rs  header.rs  message.rs  mod.rs  stats.rs  tests.rs
src/topic_manager_modules/: handles.rs  instance.rs  manager.rs  mod.rs  stats.rs
src/topic_rings/: mod.rs  mpmc.rs  spsc.rs
tests/: concurrent_stress_tests.rs  cpu_performance_tests.rs  error_tests.rs  ffi_basic_tests.rs  large_payloads.rs  memory_performance_tests.rs  memory_tests.rs  message_format_performance_tests.rs  message_format_tests.rs  metadata_tests.rs  reliability_tests.rs  scale_integration_tests.rs  schema_evolution_tests.rs  security_edge_tests.rs  shared_pools_tests.rs  structured_layout_tests.rs  sync_patterns_tests.rs  topic_manager_tests.rs  topic_rings_tests.rs
