[package]
name = "renoir"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance shared memory manager for inter-process communication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/renoir"
keywords = ["shared-memory", "ipc", "ros2", "zero-copy", "memory-management"]
categories = ["memory-management", "concurrency", "api-bindings"]

[lib]
name = "renoir"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "renoir-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dependencies]
# Core dependencies for shared memory and system operations
libc = "0.2"
memmap2 = "0.9"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4"
env_logger = "0.10"
lazy_static = { version = "1.4", optional = true }
crc32fast = "1.3"

# Safe POSIX syscall wrappers - replaces manual libc calls  
nix = { version = "0.27", features = ["fs", "mman", "poll", "event"] }

# Async event-driven I/O - replaces manual poll loops
mio = { version = "0.8", features = ["os-poll", "net", "os-ext"] }

# Official FlatBuffers implementation
flatbuffers = "23.5"

# For atomic operations and lock-free data structures
crossbeam = "0.8"
parking_lot = "0.12"

# For memory alignment and layout
aligned = "0.4"
bytemuck = { version = "1.0", features = ["derive"] }

# For CLI tool
clap = { version = "4.0", optional = true }

# FFI dependencies (lazy_static already added above)

# Optional: for advanced memory management
mimalloc = { version = "0.1", optional = true }

[build-dependencies]
# C++ header generation for ROS2 interop
cbindgen = "0.24"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"
rand = "0.8"
proptest = "1.0"

[features]
default = ["file-backed", "memfd", "c-api"]
file-backed = []
memfd = []
c-api = ["lazy_static"]
cli = ["clap"]
custom-allocator = ["mimalloc"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "allocator_bench"
harness = false

[[bench]]
name = "ringbuf_bench" 
harness = false

[package.metadata.docs.rs]
features = ["file-backed", "memfd", "c-api"]